# GMRVQt3D

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt  scenemodifier.cpp  scenemodifier.h
Editor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
